--- a/prompt-24.html
+++ b/prompt-24.html
@@ -100,82 +100,37 @@ marque @tezza.vu
 
 site: /dreamina.capcut.com/
 
-Ultra-realistic cinematic female lifestyle portrait — Blender Cycles render
-Camera & composition
+Ultra-realistic cinematic female portrait — Blender Cycles render
 
-Vertical medium-close shot.
-Camera positioned slightly above chest level, angled downward (selfie perspective).
-Wide-angle lens feel with natural distortion in the foreground.
-Subject centered, torso dominant in frame.
+Camera & composition:
+Vertical medium-close portrait, framed from upper torso to top of the head. Camera positioned slightly behind the subject’s right shoulder, at shoulder-to-eye level, creating a three-quarter back view with the face turned toward the camera. Natural lens perspective with realistic compression and shallow depth of field. Subject placed slightly off-center, with open sky occupying the upper background.
 
-Pose & body position (reference-locked)
+Pose & orientation:
+Woman standing outdoors, body angled away from the camera while the head turns back over the shoulder. Upper back subtly exposed and closer to the camera. Relaxed posture, casual and spontaneous. Head slightly tilted, preserving the exact pose and angle of the reference image.
 
-Female subject standing casually in an indoor parking garage.
-One arm extended forward holding the camera.
-Other hand gently pulling the hem of the crop top downward.
-Hips subtly tilted, relaxed posture.
+Gaze & expression:
+Subject looking directly at the camera with one eye gently closed in a wink. Soft smile with relaxed lips, conveying a carefree, playful, sunlit mood.
 
-Face & expression (reference-based)
+Hair:
+Natural blonde hair with a warm golden tone. Medium length, layered, with soft bangs/fringe across the forehead. Hair gently lifted and flowing by a light coastal breeze, strands moving naturally sideways and slightly backward, subtle motion visible, soft flyaways catching the sunlight, realistic wind interaction without exaggeration.
 
-Face strictly based on the reference image.
-Playful, cheeky expression.
-Lips slightly puckered holding a french fry between them.
-Eyes looking slightly off-camera.
-Wearing black-framed glasses.
+Face & skin:
+Light, natural makeup with visible skin texture, freckles across the cheeks and nose, soft blush, and realistic pores. Warm sun-kissed skin tone with gentle highlights from direct daylight.
 
-Hair
+Body & details:
+Bare upper back and shoulder blades visible. A subtle red kiss-mark (lip print) placed on the upper back just below the shoulder line, softly blended into the skin. Natural body proportions with realistic anatomy.
 
-Long, straight blonde hair, parted at the center.
-Smooth texture with natural shine and fine strand separation.
-Hair falling evenly over shoulders and chest.
+Environment:
+Outdoor coastal landscape. Clear blue sky dominating the background, distant ocean horizon visible, and natural greenery in the lower background. Open-air, summer atmosphere.
 
-Skin & realism
+Lighting:
+Natural daylight with soft, warm sunlight illuminating the subject from the front/side. Balanced exposure, gentle shadows, and realistic light falloff. No artificial lighting.
 
-Light skin tone with realistic texture.
-Visible pores, soft freckles, natural blush.
-Balanced highlights and shadows.
-No plastic or artificial smoothing.
+Style & quality:
+Ultra-realistic 3D realism, cinematic lifestyle photography look, Blender Cycles–style skin shading, high dynamic range, sharp focus, 8K detail, realistic color grading, IMVU / Second Life–compatible realism.
 
-Outfit (modified as requested)
-
-Fitted short-sleeve crop top in white fabric with black collar and black sleeve trim.
-clean and minimal, no additional designs.
-Low-rise dark green cargo pants, partially unzipped, relaxed fit.
-Visible navel piercing with subtle metallic shine small.
-
-Accessories
-
-Black-framed glasses.
-Small hoop earrings.
-Navel piercing.
-
-Environment
-
-Indoor parking garage.
-Concrete floor and ceiling.
-Structural pillars in the background.
-Soft ambient artificial lighting.
-
-Lighting
-
-Neutral indoor lighting.
-Soft overhead illumination.
-Natural shadow falloff on body contours.
-Cinematic realism with balanced exposure.
-
-Mood & aesthetic
-
-Playful, casual, youthful.
-Urban lifestyle vibe.
-Confident and spontaneous selfie energy.
-
-Render & quality
-
-Ultra-realistic 3D render.
-Blender Cycles style.
-Cinematic realism, HDR, 8K quality.
-Sharp focus, high skin and fabric fidelity.
-IMVU / Second Life compatible realism.</pre>
+Negative prompt:
+Cartoon, anime, stylized, low poly, plastic skin, over-smoothing, exaggerated wind, frozen hair motion, distorted anatomy, harsh shadows, artificial lighting, blur, noise, watermark, text, painterly style.</pre>
       <button onclick="copyFallback('prompt1')">Copiar Prompt</button>
       <div class="hint">Se o botão não funcionar, selecione o texto acima e copie manualmente.</div>
     </div>
